--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 
 dependencies {
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation "io.reactivex.rxjava3:rxjava:3.1.3"
@@ -52,8 +54,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation files('libs/MyRetrofit.jar')
-    implementation fileTree(dir: "libs",includes: ["**/*.jar"])
+
+    
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
