--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wanandroid">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".base.APP"
         android:allowBackup="true"
@@ -11,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WanAndroid">
+        <activity
+            android:name=".ui.webpage.WebActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.mainactivity.MainActivity"
             android:exported="true">
